deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: flask-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: flask

  template:
    metadata:
      labels:
        app: flask


    spec:
      containers:
      - name: flask-container
        image: vk0908/flask-app:v1
        ports: 
        - containerPort: 5000
