green-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: flask-green
  labels:
    app: flask
    version: green

spec:
  replicas: 2

  selector:
    matchLabels:
      app: flask
      version: green

  template:
    metadata:
      labels:
        app: flask
        version: green


    spec:
      containers:
      - name: flask-container
        image: vk0908/flask-app:v1
        ports: 
        - containerPort: 5000
