service.yml
apiVersion: v1

kind: Service

metadata:
  name: flask-service

spec:
  type: NodePort

  selector:
    app: flask

  ports:
  - port: 80
    targetPort: 5000
